# journaldriver

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  default.nix
src/: journald.rs  main.rs  stackdriver.rs  tests.rs
