[package]
name = "journaldriver"
version = "1.0.0"
authors = ["Vincent Ambo <vincent@aprila.no>"]
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ]}
env_logger = "0.5"
failure = "0.1"
hyper = "0.11"
lazy_static = "1.0"
log = "0.4"
medallion = "2.2"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
systemd = "0.3"

[build-dependencies]
pkg-config = "0.3"
